--- a/templates/settings/settings.json
+++ b/templates/settings/settings.json
@@ -1,33 +1,89 @@
 {
   "permissions": {
     "allow": [
-      "Read(~/**)",
-      "Read(~/empowerai*/**)",
-      "Bash",
-      "Write({{PROJECT_DIR}}*/**)",
-      "Edit({{PROJECT_DIR}}*/**)"
+      "Read(**/*)",
+      "Read({{PROJECT_DIR}}/**)",
+      "Write({{PROJECT_DIR}}/**)",
+      "Edit({{PROJECT_DIR}}/**)",
+      "Grep(**/*)",
+      "Glob(**/*)",
+      "Bash(git *)",
+      "Bash(gh *)",
+      "Bash(npm *)",
+      "Bash(pytest *)",
+      "Bash(python *)",
+      "Bash(python3 *)",
+      "Bash(node *)",
+      "Bash(jq *)",
+      "Bash(ls *)",
+      "Bash(cat *)",
+      "Bash(grep *)",
+      "Bash(find *)",
+      "Bash(sed *)",
+      "Bash(awk *)",
+      "Bash(pwd *)",
+      "Bash(cd *)",
+      "Bash(mkdir *)",
+      "Bash(touch *)",
+      "Bash(cp *)",
+      "Bash(mv *)",
+      "Bash(rm *)",
+      "Bash(echo *)",
+      "Bash(date *)",
+      "Bash(basename *)",
+      "Bash(dirname *)",
+      "Bash(readlink *)",
+      "Bash(source *)",
+      "Bash(chmod *)",
+      "Bash(head *)",
+      "Bash(tail *)",
+      "Bash(wc *)",
+      "Bash(sort *)",
+      "Bash(uniq *)",
+      "Bash(tr *)",
+      "Bash(cut *)",
+      "Bash(perl *)",
+      "Bash(sleep *)",
+      "Bash(time *)",
+      "Bash(which *)",
+      "Bash(whoami *)",
+      "Bash(uname *)",
+      "Bash(env *)",
+      "Bash(export *)",
+      "Bash(set *)",
+      "Bash(test *)",
+      "Bash([ *)",
+      "Bash(xargs *)",
+      "Bash(tee *)",
+      "Bash(./bin/test-* *)",
+      "Bash(starforge *)",
+      "Bash(claude *)"
     ],
     "deny": [
       "Bash(rm -rf /:*)",
       "Bash(rm -rf ~:*)",
       "Bash(rm -rf /Users:*)",
-      "Bash(rm -rf ~/empowerai/.git:*)",
+      "Bash(rm -rf {{PROJECT_DIR}}/.git:*)",
+      "Bash(rm -rf .git:*)",
       "Bash(git push --force origin main:*)",
+      "Bash(git push -f origin main:*)",
+      "Bash(git push --force-with-lease origin main:*)",
       "Bash(git reset --hard origin/main:*)",
       "Bash(git checkout main && git reset:*)"
     ],
     "ask": [
-      "Bash(sudo:*)",
-      "Bash(su:*)",
-      "Bash(chmod +x /usr/*:*)",
-      "Bash(chown:*)",
-      "Bash(kill:*)",
-      "Bash(killall:*)",
-      "Bash(shutdown:*)",
-      "Bash(reboot:*)",
-      "Bash(dd:*)",
-      "Bash(mkfs:*)",
-      "Bash(fdisk:*)"
+      "Bash(sudo *)",
+      "Bash(su *)",
+      "Bash(chmod +x /usr/* *)",
+      "Bash(chown *)",
+      "Bash(kill *)",
+      "Bash(killall *)",
+      "Bash(shutdown *)",
+      "Bash(reboot *)",
+      "Bash(dd *)",
+      "Bash(mkfs *)",
+      "Bash(fdisk *)",
+      "Bash(diskutil *)"
     ]
   },
   "hooks": {
