feat: Add Stop hook for autonomous agent handoffs
- Implement Stop hook for autonomous agent coordination
- Move test scripts to tests/hooks/ directory
- Remove development artifacts from templates

Addresses feedback from @JediMasterKT on file placement

--- a/templates/settings/settings.json
+++ b/templates/settings/settings.json
@@ -106,6 +106,17 @@
           }
         ]
       }
+    ],
+    "Stop": [
+      {
+        "matcher": "",
+        "hooks": [
+          {
+            "type": "command",
+            "command": "{{PROJECT_DIR}}/.claude/hooks/stop.py"
+          }
+        ]
+      }
     ]
   }
 }
