feat: Implement Discord Agent Blocked notification with @mention #241
Add notify_agent_blocked() function with mobile push notification support.

Changes:
- New function in templates/lib/router.sh with @mention support
- Integration tests verify @mention, truncation, color, fields, export
- .env.example documents DISCORD_USER_ID configuration
- Agent prompts updated with decision-making guidance
- Graceful fallback if DISCORD_USER_ID not set

Testing:
- 11 integration tests passing
- All existing tests still pass
- Performance: <100ms + Discord push latency

Closes #241

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,24 @@
 # export DISCORD_WEBHOOK_URL=https://discordapp.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN
 
 # ============================================================================
+# Optional: Discord @Mention for Agent Blocked Notifications
+# ============================================================================
+# When agents encounter ambiguity and need human input, they call
+# notify_agent_blocked() which sends a Discord notification. If you provide
+# your Discord User ID, notifications will include an @mention to trigger
+# push notifications with sound on your mobile device.
+#
+# How to get your Discord User ID:
+# 1. In Discord, go to User Settings → Advanced → Enable "Developer Mode"
+# 2. Right-click your username anywhere → Copy User ID
+# 3. Paste the numeric ID below (should be 18 digits)
+#
+# Example:
+# export DISCORD_USER_ID=123456789012345678
+#
+# If not set, agent blocked notifications will still be sent, just without @mention.
+
+# ============================================================================
 # Optional: Other Notification Channels (Coming Soon)
 # ============================================================================
 # export SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
