cleanup: Remove development artifacts from production
Removes all internal development docs that don't belong in production:
- PR review documents (PR-*-REVIEW.md)
- Test results and reports
- Daemon testing artifacts
- Phase analysis documents

These were mistakenly committed during development. Reviews should be
in PR comments, not committed files.

Adds .gitignore rules to prevent future commits.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@ __pycache__/
 # Environment files (but keep template)
 .env
 !.env.example
+
+# Development artifacts - DO NOT COMMIT
+docs/PR-*-REVIEW.md
+docs/PR-*-QA*.md
+docs/*-test-*.md
+docs/daemon-*.md
+docs/phase*.md
